--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ markdown:         kramdown
 highlighter:      rouge
 
 title: Jaswanth
+name: Jas' blog
 description: >- # this means to ignore newlines until "baseurl:"
   Android.
   iOS.
@@ -30,7 +31,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Bot.
   ++Testability 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: https://jaswanth.xyz # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jaswanthm
 linkedin_username: jaswanthm
 
