--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ markdown:         kramdown
 highlighter:      rouge
 
 title: Jaswanth
-name: Jas' blog
+tagline: Jas' blog
 description: >- # this means to ignore newlines until "baseurl:"
   Serverless. 
   React.
@@ -32,8 +32,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   ++Testability 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://jaswanth.xyz # the base hostname & protocol for your site, e.g. http://example.com
-github_username: jaswanthm
-linkedin_username: jaswanthm
+
+author:
+  name:           'Jaswanth Manigundan'
+  url:            https://www.linkedin.com/in/-jaswanth/
+
 
 # Build settings
 theme: jekyll-theme-hydeout
@@ -43,11 +46,6 @@ plugins:
   - jekyll-paginate
 
 paginate: 5
-
-# generate social links in footer
-social_links:
-  twitter: jaswanthm
-  github: jaswanthm
 
 # Sidebar link settings
 sidebar_home_link:  true
@@ -61,23 +59,3 @@ disqus:
     # Leave shortname blank to disable comments site-wide.
     # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
     shortname: jaswanth-xyz
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
