--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -1,56 +1,26 @@
 email:
-  id: 'jessica.reel@outlook.com'
+  id: 'jaswanth.ooty@gmail.com'
   href: 'mailto:'
   title: 'Email'
   fa-icon: 'fa-envelope-square'
 
-facebook:
-  id:
-  href: 'https://www.facebook.com/'
-  title: 'Facebook'
-  fa-icon: 'fa-facebook-square'
-
 twitter:
-  id:
+  id: 'jaswanthm'
   href: 'https://www.twitter.com/'
   title: 'Twitter'
   fa-icon: 'fa-twitter-square'
 
-googleplus:
-  id:
-  href: 'https://plus.google.com/'
-  title: 'Google+'
-  fa-icon: 'fa-google-plus-square'
-
 github:
-  id: 'jreel'
+  id: 'jaswanthm'
   href: 'https://github.com/'
   title: 'GitHub'
   fa-icon: 'fa-github-square'
 
 linkedin:
-  id: 'thereeljess'
+  id: '-jaswanth'
   href: 'https://www.linkedin.com/in/'
   title: 'LinkedIn'
   fa-icon: 'fa-linkedin-square'
-
-instagram:
-  id:
-  href: 'https://instagram.com/'
-  title: 'Instagram'
-  fa-icon: 'fa-instagram'
-
-stackoverflow:
-  id:
-  href: 'http://stackoverflow.com/'
-  title: 'StackOverflow'
-  fa-icon: 'fa-stack-overflow'
-
-youtube:
-  id:
-  href: 'https://youtube.com/'
-  title: 'YouTube'
-  fa-icon: 'fa-youtube'
 
 rss:
   id: '/feed.xml'
