--- a/_data/social-media.yml
+++ b/_data/social-media.yml
@@ -5,7 +5,7 @@ email:
   fa-icon: 'fa-envelope'
 
 twitter:
-  id: 'jaswanthm'
+  id: 'jaswanth_m'
   href: 'https://www.twitter.com/'
   title: 'Twitter'
   fa-icon: 'fa-twitter'
