Added linkedin feature

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ author-image: jas.jpg
 about-author: I'm a developer turned tester who is very passionate about building quality software..!
 author-email: jaswanth.ooty@gmail.com
 author-twitter: https://twitter.com/jaswanth_m
+author-linkedin: https://www.linkedin.com/in/-jaswanth/
 # author-facebook: https://twitter.com/
 # author-instagram: https://www.instagram.com/
 # author-pinterest: https://pinterest.com/
@@ -33,6 +34,7 @@ author-twitter: https://twitter.com/jaswanth_m
 
 # Social Media Links (Links are located in hero and footer)
 twitter: https://twitter.com/jaswanth_m
+linkedin: https://www.linkedin.com/in/-jaswanth/
 # facebook: https://facebook.com/
 # google-plus: https://plus.google.com/
 # instagram: https://www.instagram.com/
